Setup the template.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "src",
     "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
@@ -19,6 +19,7 @@
     ]
   },
   "include": [
-    "**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ]
 }
